# job-intelligence-platform

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260423_0001_initial.py  20260424_0002_sources_soft_delete_schema.py  20260429_0003_source_company_provider_key.py  20260429_0004_add_validated_sources.py  20260501_0005_cleanup_untracked_jobs.py
app/: __init__.py  _pyc_loader.py  main.py  schemas.py
app/config/: logging.py  settings.py
app/domain/: classification.py  common.py  ingestion.py  job_preferences.py  job_visibility.py  notifications.py  operations.py  source_batch_runs.py  source_cleanup.py  source_health_cleanup.py  source_seed.py  sources.py  tracking.py  transient_ingestion.py
app/persistence/: db.py  models.py  schema_guard.py
app/templates/: base.html
app/web/: dependencies.py  routes.py
docs/architecture/: configurable_job_preferences_architecture.md  hide_rejected_job_openings_technical_design.md  job_intelligence_platform_implementation_plan.md  job_intelligence_platform_mvp_technical_design.md  saas_dashboard_ui_revamp.md  source_delete_job_cleanup_technical_design.md  source_edit_delete_technical_design.md  sources_batch_run_controls_architecture.md  transient_untracked_ingestion_jobs_technical_design.md
docs/backend/: configurable_job_preferences_implementation_plan.md  configurable_job_preferences_implementation_report.md  csv_import_sources_zero_imported_implementation_plan.md  csv_import_sources_zero_imported_implementation_report.md  (+19 more)
tests/: conftest.py
(+175 files in other folders)
