[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-intelligence-platform"
version = "0.1.0"
description = "Local-first Job Intelligence Platform MVP backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
